Created the first components ( empty for now ) for state 1 Put in place the whole SASS / Global styles / Fonts situation

--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,14 @@
               "src/favicon.ico",
               "src/assets"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules",
+                "src/assets/sass"
+              ]
+            },
             "styles": [
-              "src/styles.scss"
+              "src/global-styles.scss"
             ],
             "scripts": []
           },
